style.css
/* ... */
html {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: var(--fs-body);
  font-style: normal;
  line-height: 1.5;
  background-color: #252729;
  color: var(--clr-white);
  overflow-x: hidden;
}

h1,
h2 {
  font-family: inherit;
  font-size: var(--fs-heading);
  font-weight: 700;
  line-height: 1.5;
  color: var(--clr-white);
  text-transform: uppercase;
}

h3 {
  font-family: inherit;
  font-size: var(--fs-heading-400);
  font-weight: 700;
  line-height: 1.5;
  color: var(--clr-green);
}

a,
a:link,
a:focus {
  text-decoration: none;
  font-size: var(--fs-link);
  color: var(--clr-white);
  font-weight: 700;
}

ul {
  list-style: none;
}

.container {
  width: min(90%, 1300px);
  margin-inline: auto;
}

main {
  margin-top: 80px;
}

main section {
  padding-block: var(--section-padding);
}

.btn {
  font-family: inherit;
  display: inline-block;
  cursor: pointer;
  border: none;
  outline: none;
  border-radius: 40px;
  padding: 10px 2em;
  color: var(--clr-white);
  text-align: center;
  text-transform: uppercase;
  transition: all 0.2s ease-in;
}

.btn:hover {
  transform: scale(1.03);
}

.btn.btn-red {
  background-color: var(--clr-red);
}

.btn.btn-grey {
  background-color: #6b6b6b;
}

.btn.btn.btn-red:hover {
  background-color: var(--clr-white);
  color: var(--clr-red);
}

.btn.btn-blue {
  background-color: var(--clr-blue-100);
  color: var(--clr-white);
}

.btn.btn-blue:hover {
  background-color: var(--clr-blue-hover);
  color: var(--clr-white);
}

/* ********************************************************* */
/* ******************** Sections General ****************** */
/* ********************************************************* */

/* Background Styles */
.section {
  width: 100%;
  min-height: 40vh;
  background-position: top right;
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  align-items: center;
  position: relative;
}

/* Text Styles */
.section__text {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 1rem;
}

/* Section */
.section .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.section .section__image {
  text-align: center;

  img {
    width: 100%;
  }
}

@media (width > 740px) {
  .section {
    background-size: contain;
    padding-block: 4rem;
    .container {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: space-between;
    }

    .section__text {
      width: min(50%, 500px);
      background-color: transparent;
      padding: 0;
    }

    .section__image {
      width: 50%;
    }
  }
}

/* ***************************************************** */
/* ******************** Header Section ****************** */
/* ***************************************************** */
a.anchor {
  display: block;
  position: relative;
  top: -250px;
  visibility: hidden;
}

header {
  background-color: #252729;
  width: 100%;
  height: 80px;
  padding-block: 1rem;
  position: fixed;
  display: flex;
  align-items: center;
  top: 0;
  left: 0;
  z-index: 10;
}

header .cta-section {
  display: flex;
  gap: 1rem;
  flex-direction: column;
}

/* Mobile View */

header .mobile-header {
  display: flex;
  justify-content: space-between;
}

header .mobile-header nav {
  position: absolute;
  opacity: 0;
  width: 0;
  left: -50%;
  padding: 1rem;
  height: 100vh;
  transition: all 0.5s ease-in-out;
  z-index: 10;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

header .mobile-header nav ul li a {
  opacity: 0;
  transition: opacity 0.8s ease-in-out;
}

header .mobile-header nav ul {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 2rem;
}
header .mobile-header.active nav {
  left: 0;
  opacity: 1;
  width: 80%;
  background-color: #252729;
}

body:has(header .mobile-header.active) {
  overflow-y: hidden;
}

header .mobile-header.active nav ul li a {
  opacity: 1;
}

header .logo {
  width: min(25vmin, 130px);
  height: auto;
  object-fit: contain;
  display: inline-block;
  vertical-align: middle;
}

header .mobile-header #slideInTrigger {
  position: relative;
  width: 50%;
}

header .mobile-header .bars,
header .mobile-header .times {
  position: absolute;
  right: 0%;
  top: 50%;
  transform: translateY(-50%);
  width: 30px;
  height: auto;
  text-align: right;
  transition: all 0.5s ease;
}

header .mobile-header .times {
  opacity: 0;
}
header .mobile-header.active .times {
  opacity: 1;
}

header .mobile-header.active .bars {
  opacity: 0;
}

/* Desktop View */
header .desktop-header {
  display: none;
}

header .desktop-header .desktop-header__logo {
  width: 20%;
}

header .desktop-header nav {
  display: flex;
  justify-content: space-between;
  width: 80%;
}

header .desktop-header .desktop-header__logo img {
  max-width: 130px;
}

header .desktop-header nav ul {
  display: flex;
  align-items: center;
  gap: 1.5rem;
}

header .desktop-header nav .cta-section {
  display: flex;
  flex-direction: row;
}
header .desktop-header nav .cta-section .btn {
  display: inline-block;
}

@media (width > 1138px) {
  header .desktop-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  header .desktop-header .desktop-header__logo {
    display: flex;
    align-items: center;
  }

  header .mobile-header {
    display: none;
  }
}

@media (width > 1030px) {
  header .desktop-header nav ul {
    gap: 2rem;
  }
}

/* ***************************************************** */
/* ******************** Hero Section ****************** */
/* ***************************************************** */
.hero-section {
  background-color: #1a1b1b;
}

.hero-section .container {
  z-index: 1;
  position: relative;

  .section__text {
    order: 2;
  }

  .section__image {
    order: 1;
  }
}
/* ... */

